--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -4,6 +4,7 @@ menu:
   description: Primary and footer menu component.
   dependencies:
     - icon
+    - grid
   fields:
     items:
       type: object
@@ -156,8 +157,10 @@ menu:
                 title: Imprint
                 url: '#'
       configuration:
-        parent_list: ''
-        parent_link: 'text-green-700 text-lg font-bold dark:text-white pb-2'
-        child_list:  ''
-        child_link: 'text-green-700 pb-2 dark:text-white text-green-700'
+        parent_list_classes: ''
+        parent_list_item_classes: ''
+        parent_link_classes: 'text-green-700 text-lg font-bold dark:text-white pb-2'
+        child_list_classes:  ''
+        child_link_item_classes: ''
+        child_link_classes: 'text-green-700 pb-2 dark:text-white text-green-700'
   visibility: storybook
