fix(footer): fix child list item classes

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -161,6 +161,6 @@ menu:
         parent_list_item_classes: ''
         parent_link_classes: 'text-green-700 text-lg font-bold dark:text-white pb-2'
         child_list_classes:  ''
-        child_link_item_classes: ''
+        child_list_item_classes: ''
         child_link_classes: 'text-green-700 pb-2 dark:text-white text-green-700'
   visibility: storybook
