--- a/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
@@ -30,7 +30,6 @@ banner:
       type: select
       allow_token: true
       label: Text position
-      default_value: center_center
       allow_expose: true
       options:
         top_left:
@@ -71,7 +70,6 @@ banner:
             text: 'text-right items-end justify-end'
   configuration:
     defaults:
-      classes: 'relative dark rounded-lg border border-transparent overflow-hidden'
-      wrapper_classes: 'absolute top-0 left-0 w-full h-full flex'
-      teaser_classes: 'bg-black bg-opacity-25 mix-blend-normal rounded-lg p-6'
-      teaser_spacing: 'p-6'
+      wrapper_classes: 'relative dark rounded-lg border border-transparent overflow-hidden'
+      teaser_wrapper_classes: 'absolute top-0 left-0 w-full h-fit flex'
+      teaser_classes: 'bg-black bg-opacity-25 mix-blend-normal rounded-lg p-6 m-6'
